Adding endpoint period documentation
